// Copyright 2024 Charlie Cohen <linzellart@gmail.com>
//
// Licensed under the GNU General Public License, Version 3.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.gnu.org/licenses/gpl-3.0.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// List of available options:
// https://github.com/yoheimuta/protolint/blob/master/_example/config/.protolint.yaml

syntax = "proto3";

package client.v1;

import "google/api/field_behavior.proto";

// Security
//
// Security represents the user's security settings.
message Security {
    // two_factor: Whether the user wants to enable two-factor authentication.
    bool two_factor = 1 [(google.api.field_behavior) = INPUT_ONLY];
    // qr_code: The user's QR code for two-factor authentication.
    string qr_code = 2 [
        (google.api.field_behavior) = IMMUTABLE,
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
    // magic_link: Whether the user wants to enable magic link authentication.
    bool magic_link = 3 [(google.api.field_behavior) = INPUT_ONLY];
}

// UpdateSecurityRequest
//
// UpdateSecurityRequest represents a request to update the user's security settings.
//
// Fields:
//
// - field: The field to update.
// - value: The value to set.
message UpdateSecurityRequest {
    // field: The field to update.
    string field = 1 [(google.api.field_behavior) = REQUIRED];
    // value: The value to set.
    oneof value {
        // two_factor: Whether the user wants to enable two-factor authentication.
        bool two_factor = 2;
        // magic_link: Whether the user wants to enable magic link authentication.
        bool magic_link = 3;
    }
}
